--- a/package.json
+++ b/package.json
@@ -9,30 +9,47 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-is": "18.2.0",
+    "react-router-dom": "6.8.1",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cypress": "15.8.5",
     "@nrwl/eslint-plugin-nx": "15.8.5",
     "@nrwl/jest": "15.8.5",
     "@nrwl/js": "15.8.5",
     "@nrwl/linter": "15.8.5",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.8.5",
+    "@nrwl/react": "^15.8.5",
+    "@nrwl/storybook": "^15.8.5",
+    "@nrwl/vite": "15.8.5",
     "@nrwl/workspace": "15.8.5",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/builder-vite": "^0.2.6",
+    "@storybook/core-common": "^6.5.15",
+    "@storybook/core-server": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-is": "17.0.3",
+    "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
     "babel-jest": "^29.4.1",
+    "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -43,13 +60,20 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "~20.0.3",
     "nx": "15.8.5",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "url-loader": "^4.1.1",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
